# VeriForm

./: .env.example  .gitignore  Dockerfile  README.md  ai_form_report_20260522_161912.csv  docker-compose.yml  fake_playwright.py  pyproject.toml  run_demo.py  run_demo_example.py  start.sh
alembic/: env.py
alembic/versions/: e9373d892988_initial_models.py
docs/: 00-project-vision.md  01-requirements.md  02-architecture.md  03-phase-1-mvp.md  04-phase-2-enhancements.md  05-phase-3-scalability.md  06-test-plan.md  07-api-and-data-model.md  08-python-stack-decision.md  structured-constraint-layer.md  url_based_form_test_automation_spec.md  veriform_repository_audit_and_learning_guide.md
example_code_result/: ai_form_report_20260522_121616.csv  playwright_report_20260522_120822.csv
reports/: .gitkeep
src/veriform/: __init__.py
src/veriform/ai/: registry.py
src/veriform/ai_inference/: __init__.py  confidence_ranker.py  field_classifier.py  provider_interface.py  semantic_parser.py
src/veriform/analytics/: __init__.py
src/veriform/analyzer/: __init__.py  analyzer.py  visual_analysis.py
src/veriform/api/: __init__.py  app.py
src/veriform/config/: __init__.py  settings.py
src/veriform/constraint_ir/: __init__.py  enums.py
src/veriform/constraints/: __init__.py  dependency_graph.py  inferred_constraints.py  structured_synthesis.py
src/veriform/detector/: __init__.py  detector.py  normalization.py  selector_resilience.py  semantic_classifier.py  semantic_state.py  state_summarizer.py  state_tracker.py
src/veriform/executor/: __init__.py  action_engine.py  executor.py  probe_executor.py  queue_manager.py
src/veriform/exporters/: html_exporter.py  json_schema_exporter.py  openapi_exporter.py
src/veriform/generator/: __init__.py  candidate_generator.py  combination_planner.py  generator.py
src/veriform/inference/: dynamic_infer.py
src/veriform/models/: __init__.py  ai_decision_logger.py  healing.py  schemas.py  workflow.py
src/veriform/mutator/: mutation_engine.py
src/veriform/orchestrator/: __init__.py  exploration_engine.py  orchestrator.py  pipeline.py  replay_optimizer.py  replay_repair.py  workflow_runner.py
templates/: discovery_report.html.j2  report.html.j2
tests/: __init__.py  conftest.py  test_action_engine.py  test_ai_inference.py  test_ai_integration.py  test_analytics_service.py  test_analyzer.py  test_api_runs.py  test_artifact_service.py  test_combination_planning.py  test_constraint_ir_atomic.py  test_constraint_ir_base.py  test_constraint_ir_enums.py  test_constraint_ir_profile.py  test_constraint_ir_segments.py  test_constraint_ir_translator.py  test_constraint_merging.py  test_detector.py  test_detector_enhancements.py  test_dynamic_infer.py  test_executor.py  test_generator.py  test_healing.py  test_mutation_engine.py  test_orchestrator.py  test_pipeline_integration.py  test_regex_engine.py  test_reporter.py  test_reporter_workflow.py  test_repositories.py  test_schema_extensions.py  test_schemas.py  test_schemas_discovery.py  test_services.py  test_state_tracker.py  test_workflow_runner.py
veriform_v2/: README.md  check_server.py  diagnose_fetch.py  diagnose_final.py  diagnose_sync.py  pyproject.toml
veriform_v2/output/: replay.py  report.html  report.json
veriform_v2/tests/: test_mutation.py  test_sync.py
(+27 files in other folders)
