[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veriform"
version = "0.1.0"
description = "Deterministic URL-based form testing platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "playwright>=1.44.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",      # for FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["src/veriform"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths      = ["tests"]
asyncio_mode   = "auto"
addopts        = "--tb=short -q -p no:cacheprovider --basetemp=.pytest_tmp"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/veriform"]
omit   = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
