[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veriform"
version = "0.1.0"
description = "Deterministic URL-based form testing platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0.0",
    "playwright>=1.40.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "litellm>=1.0.0",
    "pillow>=10.0.0",
    "ImageHash>=4.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",      # for FastAPI TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["src/veriform"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths      = ["tests"]
asyncio_mode   = "auto"
addopts        = "--tb=short -q -p no:cacheprovider --basetemp=.pytest_tmp"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/veriform"]
omit   = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty   = true
